--- a/sample/src/main/resources/templates/checkout/success.html
+++ b/sample/src/main/resources/templates/checkout/success.html
@@ -102,7 +102,7 @@
                                 <tbody>
                                 <tr>
                                     <td>Name</td>
-                                    <td th:text="|${transaction.billingFirstName} ${transaction.billingLastName}|"></td>
+                                    <td th:text="|${transaction.shippingFirstName} ${transaction.shippingLastName}|"></td>
                                 </tr>
                                 <tr>
                                     <td>Address</td>
