--- a/sample/src/main/resources/templates/index.html
+++ b/sample/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="form-buy">
                             <form accept-charset="UTF-8" action="/cart_add" method="get">
-                                <input name="product_id" type="hidden" th:value="${product.id}" />
+                                <input name="productId" type="hidden" th:value="${product.id}" />
                                 <button class="button buy-button">
                                     Buy
                                 </button>
