--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -3,50 +3,49 @@
         Veritrans Java Client Client Sample Store
     </title>
     <style>
-        .button + .button {
-            margin-left: 10px
-        }
-
-        .button {
-            border: 0;
-            padding: 8px 20px;
-            color: white
-        }
-
-        .button:hover {
-            text-decoration: none;
-            color: white
-        }
-
-        .button:active,
-        .button:focus {
-            outline: 0
-        }
-
-        .btn-vt-web {
-            background: #3693d6 url("/assets/images/vt_web-logo.png") center center no-repeat;
-            display: inline-block;
-            background-size: 58%;
-            padding: 20px 80px !important
-        }
-
-        .btn-vt-web:hover {
-            background-color: rgba(54, 147, 214, 0.9)
-        }
-
-        .btn-vt-direct {
-            background: #67364b url("/assets/images/vt_direct-logo.png") center center no-repeat;
-            display: inline-block;
-            background-size: 70%;
-            padding: 20px 80px !important
-        }
-
-        .btn-vt-direct:hover {
-            background-color: rgba(103, 54, 75, 0.9)
-        }
+    .button + .button {
+        margin-left: 10px
+    }
+    
+    .button {
+        border: 0;
+        padding: 8px 20px;
+        color: white
+    }
+    
+    .button:hover {
+        text-decoration: none;
+        color: white
+    }
+    
+    .button:active,
+    .button:focus {
+        outline: 0
+    }
+    
+    .btn-vt-web {
+        background: #3693d6 url("/assets/images/vt_web-logo.png") center center no-repeat;
+        display: inline-block;
+        background-size: 58%;
+        padding: 20px 80px !important
+    }
+    
+    .btn-vt-web:hover {
+        background-color: rgba(54, 147, 214, 0.9)
+    }
+    
+    .btn-vt-direct {
+        background: #67364b url("/assets/images/vt_direct-logo.png") center center no-repeat;
+        display: inline-block;
+        background-size: 70%;
+        padding: 20px 80px !important
+    }
+    
+    .btn-vt-direct:hover {
+        background-color: rgba(103, 54, 75, 0.9)
+    }
     </style>
 </head>
-
 <div th:fragment="header-gde">
     <table width="100%">
         <tr>
@@ -89,6 +88,53 @@
     <hr class="top-off" />
 </div>
 
+<div th:fragment="item_details">
+    <h2 class="no-bold">Carts</h2>
+    <hr class="top-off" />
+    <table class="table table-stripped table-condensed current_cart">
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Qty</th>
+                <th>Price</th>
+                <th>
+                    <div class="text-right">Total</div>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="cartItem : ${cartItems}">
+                <td class="span6">
+                    <div class="cart-item-image">
+                        <span class="product-name" th:text="${cartItem.product.shortName}" />
+                    </div>
+                </td>
+                <td>
+                    <span class="qty" th:text="${cartItem.count}" />
+                </td>
+                <td>
+                    <span class="price_per_unit" th:text="|Rp. ${cartItem.product.priceIdr}|" />
+                </td>
+                <td>
+                    <div class="text-right">
+                        <span class="price_total_per_unit" th:text="|Rp. ${cartItem.totalPrice}|" />
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <div class="text-right">Total :</div>
+                </td>
+                <td>
+                    <div class="text-right">
+                        <b th:text="|Rp. ${totalPrice}|" />
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
 <div class="container foot" th:fragment="footer">
     <div class="row-fluid">
         <div class="span12">
@@ -100,7 +146,6 @@
         <script src="/assets/application.js"></script>
     </div>
 </div>
-
 <div class="container foot" th:fragment="footer-vtdirect-creditcard">
     <div class="row-fluid">
         <div class="span12">
@@ -111,6 +156,6 @@
     <div class='bottom-js' style='display:none'>
         <script src="/assets/application.js"></script>
         <script src="https://api.sandbox.veritrans.co.id/v2/assets/js/veritrans.min.js"></script>
-        <script src="/assets/vtdirect.js"></script>        
+        <script src="/assets/vtdirect.js"></script>
     </div>
 </div>
