implement mandiri clickpay controller

--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -70,7 +70,7 @@
 <div class="container head" style="padding-top: 20px;" th:fragment="header">
     <div class="row-fluid">
         <div class="span6">
-            <a href="http://localhost:8080">
+            <a href="/">
                 <img alt="Vt icon" src="/assets/vt_icon.png" />
             </a>
         </div>
