nanti dibagusin ama andes

--- a/sample/src/main/resources/templates/checkout/choose_payment.html
+++ b/sample/src/main/resources/templates/checkout/choose_payment.html
@@ -126,7 +126,7 @@
                                     <p>Pay with</p>
                                     <div class='btn-group'>
                                         <button class='button btn-vt-web' id='vtweb' name='paymentMethod' type='submit' value='vtweb'></button>
-                                        <button class='button btn-vt-direct' id='vtdirect' name='paymentMethod' type='submit' value='creditCard'></button>
+                                        <button class='button btn-vt-direct' id='vtdirect' name='paymentMethod' type='submit' value='vtdirect'></button>
                                     </div>
                                 </div>
                             </div>
