--- a/sample/src/main/resources/templates/checkout/vtdirect.html
+++ b/sample/src/main/resources/templates/checkout/vtdirect.html
@@ -9,20 +9,22 @@
             <div class="span12">
                 <!-- .well -->
                 <div th:replace="layout::item_details" />
-
-                <form accept-charset="UTF-8" method="post">
-                    <select name="paymentMethod">
-                        <option value="creditCard">Credit Card</option>
-                        <option value="cimbClicks">Cimb Clicks</option>
-                        <option value="mandiriClickpay">Mandiri Clickpay</option>
-                        <option value="bcaKlikpay">BCA Klikpay</option>
-                        <option value="klikBca">Klik BCA</option>
-                    </select>
-                    <button class='button btn-vt-direct' type='submit'/>
-                </form>
+                <div class="text-left">
+                    <form accept-charset="UTF-8" method="post">
+                        <select name="paymentMethod" style="margin-right: 10px">
+                            <option value="creditCard">Credit Card</option>
+                            <option value="cimbClicks">Cimb Clicks</option>
+                            <option value="mandiriClickpay">Mandiri Clickpay</option>
+                            <option value="bcaKlikpay">BCA Klikpay</option>
+                            <option value="klikBca">Klik BCA</option>
+                        </select>
+                        <button class='button checkout-button' type='submit'>Pay</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
     <div th:replace="layout::footer" />
 </body>
+
 </html>
