Add bank transfer sample store

--- a/sample/src/main/resources/templates/checkout/vtdirect.html
+++ b/sample/src/main/resources/templates/checkout/vtdirect.html
@@ -17,6 +17,7 @@
                             <option value="mandiriClickpay">Mandiri Clickpay</option>
                             <option value="bcaKlikpay">BCA Klikpay</option>
                             <option value="klikBca">Klik BCA</option>
+                            <option value="bankTransfer">Bank Transfer</option>
                         </select>
                         <button class='button checkout-button' type='submit'>Pay</button>
                     </form>
