--- a/sample/src/main/resources/templates/checkout/vtdirect.html
+++ b/sample/src/main/resources/templates/checkout/vtdirect.html
@@ -18,6 +18,7 @@
                             <option value="bcaKlikpay">BCA Klikpay</option>
                             <option value="klikBca">Klik BCA</option>
                             <option value="bankTransfer">Bank Transfer</option>
+                            <option value="briEpay">Bri E-pay</option>
                         </select>
                         <button class='button checkout-button' type='submit'>Pay</button>
                     </form>
