--- a/sample/src/main/resources/templates/checkout/bri_epay.html
+++ b/sample/src/main/resources/templates/checkout/bri_epay.html
@@ -24,7 +24,7 @@
                 <div class="row-fluid">
                     <div class="span12">
                         <div class="text-right">
-                            <a class="button back-button" href="/index">Back</a>
+                            <a class="button back-button" href="/checkout/vtdirect">Back</a>
                             <a class="button checkout-button" data-method="post" href="/checkout/bri_epay" rel="nofollow">Confirm Payment</a>
                         </div>
                     </div>
