--- a/site/css/additional.css
+++ b/site/css/additional.css
@@ -120,7 +120,7 @@ h3 {
   color: #00a2db;
   font-weight: 400;
   font-size: 22px;
-  margin: 1.5em 0 1.5em;
+  margin: 10px 0 10px;
 }
 
 h2 {
@@ -128,7 +128,7 @@ h2 {
   font-weight: 400;
   font-size: 30px;
   color: #004290;
-  margin: 30px 0 30px 0;
+  margin: 20px 0 10px 0;
   padding: 0;
 }
 
