Add full pan credit card charging on sample store

--- a/sample/src/main/resources/templates/checkout/vtdirect.html
+++ b/sample/src/main/resources/templates/checkout/vtdirect.html
@@ -13,6 +13,7 @@
                     <form accept-charset="UTF-8" method="post">
                         <select name="paymentMethod" style="margin-right: 10px">
                             <option value="creditCard">Credit Card</option>
+                            <option value="creditCardFullPan">Credit Card (Full PAN)</option>
                             <option value="cimbClicks">Cimb Clicks</option>
                             <option value="mandiriClickpay">Mandiri Clickpay</option>
                             <option value="bcaKlikpay">BCA Klikpay</option>
