--- a/sample/src/main/resources/templates/checkout/credit_card_full_pan.html
+++ b/sample/src/main/resources/templates/checkout/credit_card_full_pan.html
@@ -41,7 +41,6 @@
                                     </div>
                                     <form accept-charset="UTF-8" class="new_order_payment" id="new_order_payment" method="post">
                                         <input id="gross_amount" name="" type="hidden" th:value="${totalPrice}" />
-                                        <input id="order_payment_vt_token" name="vt_token" type="hidden" />
                                         <div class='row-fluid'>
                                             <div class='span6'>
                                                 <div class='row-fluid'>
@@ -51,12 +50,12 @@
                                                 </div>
                                                 <div class='inner-addon right-addon control-group'>
                                                     <i class='icn visa' id='cc-icon'></i>
-                                                    <input class="span12" data-credit-card="true" id="order_payment_card_number" maxlength="22" name="" size="22" type="text" value="4811 1111 1111 1114" />
+                                                    <input class="span12" data-credit-card="true" id="order_payment_card_number" maxlength="22" name="card_number" size="22" type="text" value="4811 1111 1111 1114" />
                                                 </div>
                                             </div>
                                             <div class='span3'>
                                                 <label for="order_payment_card_exp_month">Card exp month</label>
-                                                <select class="span12" id="order_payment_card_exp_month" name="">
+                                                <select class="span12" id="order_payment_card_exp_month" name="card_expired_month">
                                                     <option value="01">01 - Jan</option>
                                                     <option value="02">02 - Feb</option>
                                                     <option value="03">03 - Mar</option>
@@ -73,7 +72,7 @@
                                             </div>
                                             <div class='span3'>
                                                 <label for="order_payment_card_exp_year">Card exp year</label>
-                                                <select class="span12" id="order_payment_card_exp_year" name="">
+                                                <select class="span12" id="order_payment_card_exp_year" name="card_expired_year">
                                                     <option th:each="year,iter : ${years}" th:selected="${iter.last}" th:text="${year}" />
                                                 </select>
                                             </div>
@@ -114,7 +113,7 @@
             </div>
         </div>
     </div>
-    <div th:replace="layout::footer-vtdirect-creditcard" />
+    <div th:replace="layout::footer" />
 </body>
 
 </html>
